# eurydice

./: .gitignore  CMakeLists.txt  Makefile  README.md
include/: AbstractSample.hpp  Runner.hpp  SineWave.hpp  SquareWave.hpp  eurydice.hpp  runner.hpp
src/: AbstractSample.cpp  CMakeLists.txt  Runner.cpp  SineWave.cpp  SquareWave.cpp  eurydice.cpp  main.cpp  runner.cpp
tests/: CMakeLists.txt  TestSineWave.cpp  TestSquareWave.cpp  test_eurydice.cpp
